Fix more Sonar issues